Closed Bug 62579 Opened 24 years ago Closed 24 years ago

RTM Crash: opening a pdf file in yahoo mail [@ KERNEL32.DLL - NPPDF32.DLL]

Categories

(Core Graveyard :: Plug-ins, defect, P2)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: serhunt)

References

Details

(Keywords: crash, topcrash, Whiteboard: [branch accept])

Crash Data

Attachments

(1 file)

**** observed with 2000-12-08 MTrunk build ****

after opening a pdf file in my yahoo mail account all attempts to go back to the
Inbox (or any link in yahoo mail) are failing: Nscp6 crashes
( i can open a pdf file in browser without a crash , it occurs only in yahoo mail
 here is a stack:
Stack:     (Signature = PluginViewerImpl::GetDOMDocument d72aa3c0)
     PluginViewerImpl::GetDOMDocument
[d:\builds\seamonkey\mozilla\modules\plugin\nglsrc\nsPluginViewer.cpp, line 407]
     nsDocShell::GetInterface
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 255]
     nsWebShell::GetInterface
[d:\builds\seamonkey\mozilla\docshell\base\nsWebShell.cpp, line 347]
     nsGetInterface::operator()
[d:\builds\seamonkey\mozilla\xpcom\base\nsIInterfaceRequestor.cpp, line 39]
     nsCOMPtr_base::assign_from_helper
[d:\builds\seamonkey\mozilla\xpcom\base\nsCOMPtr.cpp, line 66]
     ValidateOrigin [d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp,
line 631]
     nsURILoader::GetTarget
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 720]
     nsURILoader::OpenURIVia
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 778]
     nsURILoader::OpenURI
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 522]
     nsDocShell::DoChannelLoad
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 3463]
     nsDocShell::DoURILoad
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 3241]
     nsDocShell::InternalLoad
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 3006]
     nsWebShell::HandleLinkClickEvent
[d:\builds\seamonkey\mozilla\docshell\base\nsWebShell.cpp, line 841]
     OnLinkClickEvent::HandleEvent
[d:\builds\seamonkey\mozilla\docshell\base\nsWebShell.cpp, line 695]
     PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 577]
     _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 1055]
<../images/spacer.gif>
*** Bug 62581 has been marked as a duplicate of this bug. ***
plugins maybe.  
Assignee: asa → av
Component: Browser-General → Plug-ins
QA Contact: doronr → shrir
I could open a 93k pdf file successfully in yahoo mail and was able to work 
fine. Let me try a bigger file...
I created a test account on yahoo for this : user  nettester2001 ; password: 
tester. 
Adding crash, topcrash and [@ KERNEL32.DLL - NPPDF32.DLL] for tracking purposes.
Keywords: crash, topcrash
Summary: Nscp6 crashes after opening a pdf file in yahoo mail → Nscp6 crashes after opening a pdf file in yahoo mail [@ KERNEL32.DLL - NPPDF32.DLL]
Keywords: acrobat, mozilla1.0
Looking at the stack trace, I think this is caused because with a full-page 
plugin, there is no DOM document and therefore we pass a null mDocument in 
PluginViewerImpl::GetDOMDocument. My patch will fix the crash, but you will 
still get the other asserts. Also, it would probably be a good idea to run a 
leak detection tool on this kind of case.
Summary: Nscp6 crashes after opening a pdf file in yahoo mail [@ KERNEL32.DLL - NPPDF32.DLL] → RTM Crash: opening a pdf file in yahoo mail [@ KERNEL32.DLL - NPPDF32.DLL]
Andre, can I get a review for this patch?
r=av
sr=buster
took the libery of bumping up the priority and severity to realistic values for
a crash.
Severity: normal → critical
Priority: P3 → P2
Patch check-ed in.
Status: NEW → ASSIGNED
Marking Fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
i didn't crash displaying .pdf files though i do experience some difficulties to
display them : sometimes files come up empty.
peter - were you ever able to reproduce the crash using PDF files in the steps
outlined in this bug report?  We need a way to test out your fix since Shrirang
was never able to reproduce the crash in the first place.  Thanks.
yes, simply follow the directions for the bug.

If you log into Yahoo Mail! with the username/password above you'll see a 
message that has an attached PDF. Try that.

Also, this has only been checked into the trunk. Wondering if I can check into 
the branch as it's a top crasher?
Added branch accept to status whiteboard.  Peter, please check into the branch 
ASAP. Thx
.Angela...
Whiteboard: [branch accept]
Patch checked into the BRANCH.
verified fixed on windows trunk and branch builds (0117). No crash is seen, 
attachment opens properly.Marking VERIFIED
Status: RESOLVED → VERIFIED
Crash Signature: [@ KERNEL32.DLL - NPPDF32.DLL]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: