Top crash fix. Null pointer check on mDocument. bug 62579 a=av sr=buster